# CMakeTutorialTwo

./: CMakeLists.txt  Config.hpp.in  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.hpp  mysquare.cpp
